# CoreWatcher

./: CMakeLists.txt  README.md  x64_dbg_commands.txt  x86_dbg_commands.txt
Include/: FileMonitor.h
Sources/: FileMonitor.cpp  main.cpp
